k8s/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: k8s-program-namespace2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.homework.post-service
      http:
        paths:
        - path: /pamapp/dmitriy_shumskiy(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: post-service
              port:
                number: 8081
    - host: k8s.homework.user-service
      http:
        paths:
          - path: /pamapp/dmitriy_shumskiy(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
